--- a/Cost and Energy Consumption.html
+++ b/Cost and Energy Consumption.html
@@ -28,6 +28,29 @@
             text-align: center;
             color: #333;
         }
+        /* Back Button Styling */
+        .back-button-container {
+            display: flex;
+            justify-content: center;
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+        }
+
+        .back-button {
+            background-color: #2196f3;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            text-align: center;
+        }
+
+        .back-button:hover {
+            background-color: #1a2851;
+        }
+
     </style>
 </head>
 <body>
@@ -82,6 +105,12 @@
                 }
             }
         });
+        
     </script>
+     <!-- Back Button Container -->
+     <div class="back-button-container">
+        <button class="back-button" onclick="window.history.back()">Back</button>
+    </div>
+
 </body>
 </html>
