--- a/Report Generation.html
+++ b/Report Generation.html
@@ -5,29 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monthly Business Report</title>
     <style>
+        /* Basic Styling */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
+
+        /* Container and Section Styling */
+        .container {
+            max-width: 1300px;
+            padding: 20px;
+            text-align: center;
+            width: 100%;
+        }
+
         h1 {
             text-align: center;
-            margin-top: 20px;
+            margin-bottom: 20px;
         }
-        .container {
-            width: 100%;
-            max-width: 1200px; /* Maximum width of the container */
-            margin: 0 auto;
-            padding: 0 20px; /* Padding on the sides for spacing */
+
+        /* Back Button Styling */
+        .back-button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            margin-bottom: 20px;
         }
-        .table-container, .chart-container {
-            margin: 20px 0;
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+
+        /* Flex Layout for Table and Charts */
+        .report-sections {
+            display: flex;
+            gap: 10px;
+            align-items: flex-start;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        /* Table Styling */
+        .table-container {
+            flex: 1;
+            overflow-x: auto;
+            min-width: 250px;
+            max-width: 300px;
+            margin-bottom: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
-            overflow-x: auto;
-            display: block;
         }
         table, th, td {
             border: 1px solid #ddd;
@@ -36,40 +75,40 @@
             padding: 8px;
             text-align: center;
         }
-        .chart {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .chart > div {
-            width: 48%;
-            min-width: 300px;
-            box-sizing: border-box;
+        th {
+            background-color: #f4f4f4;
         }
 
-        /* Responsive Styles */
-        @media (max-width: 768px) {
-            .chart {
+        /* Chart Styling */
+        .chart-container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            align-items: center;
+            max-width: 400px;
+            margin-bottom: 20px;
+        }
+        .chart {
+            width: 100%;
+            max-width: 350px;
+            display: flex;
+            justify-content: center;
+            align-items: center; /* Center-aligns the chart content */
+        }
+
+        /* Responsive Adjustments */
+        @media (max-width: 1024px) {
+            .report-sections {
                 flex-direction: column;
                 align-items: center;
             }
-            .chart > div {
-                width: 80%;
-            }
-            table {
-                font-size: 12px;
-                display: block;
-                overflow-x: auto;
-            }
-        }
-
-        @media (max-width: 480px) {
-            table {
-                font-size: 10px;
+            th, td {
+                padding: 8px;
+                font-size: 14px;
             }
             h1 {
-                font-size: 18px;
+                font-size: 20px;
             }
         }
     </style>
@@ -78,56 +117,63 @@
 
 <div class="container">
 
+    <!-- Back Button -->
+    <a href="#" class="back-button" onclick="history.back()">Back</a>
+
     <h1>Monthly Business Report</h1>
 
-    <!-- Report Table -->
-    <div class="table-container">
-        <h2>1. Sales Data</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Item</th>
-                    <th>Sales Volume</th>
-                    <th>Revenue</th>
-                    <th>Profit</th>
-                    <th>Profit Margin (%)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Product A</td>
-                    <td>1200</td>
-                    <td>$24,000</td>
-                    <td>$4,800</td>
-                    <td>20%</td>
-                </tr>
-                <tr>
-                    <td>Product B</td>
-                    <td>800</td>
-                    <td>$16,000</td>
-                    <td>$3,200</td>
-                    <td>20%</td>
-                </tr>
-                <!-- Add more rows as needed -->
-            </tbody>
-        </table>
-    </div>
+    <div class="report-sections">
 
-    <!-- Charts -->
-    <div class="chart-container">
-        <h2>2. Sales Trends & Market Share</h2>
-        <div class="chart">
-            <!-- Line Chart Placeholder -->
-            <div>
-                <h3>Monthly Sales Growth</h3>
-                <canvas id="lineChart" width="300" height="200"></canvas>
-            </div>
-            <!-- Pie Chart Placeholder -->
-            <div>
-                <h3>Market Distribution</h3>
-                <canvas id="pieChart" width="300" height="200"></canvas>
-            </div>
+        <!-- Report Table -->
+        <div class="table-container">
+            <h2>1. Sales Data</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Item</th>
+                        <th>Sales Volume</th>
+                        <th>Revenue</th>
+                        <th>Profit</th>
+                        <th>Profit Margin (%)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Product A</td>
+                        <td>1200</td>
+                        <td>$24,000</td>
+                        <td>$4,800</td>
+                        <td>20%</td>
+                    </tr>
+                    <tr>
+                        <td>Product B</td>
+                        <td>800</td>
+                        <td>$16,000</td>
+                        <td>$3,200</td>
+                        <td>20%</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+
+        <!-- Charts Section -->
+        <div class="chart-container">
+            <h2>2. Sales Trends & Market Share</h2>
+
+            <!-- Line Chart -->
+            <div class="chart">
+                <h3>Monthly Sales Growth</h3>
+                <canvas id="lineChart"></canvas>
+            </div>
+
+            <!-- Pie Chart -->
+            <div class="chart">
+                <h3>Market Distribution</h3>
+                <canvas id="pieChart"></canvas>
+            </div>
+
+        </div>
+
     </div>
 
 </div>
@@ -135,7 +181,7 @@
 <!-- JavaScript for Charts -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-    // Sample Line Chart
+    // Line Chart
     const lineCtx = document.getElementById('lineChart').getContext('2d');
     new Chart(lineCtx, {
         type: 'line',
@@ -150,7 +196,7 @@
         }
     });
 
-    // Sample Pie Chart
+    // Pie Chart
     const pieCtx = document.getElementById('pieChart').getContext('2d');
     new Chart(pieCtx, {
         type: 'pie',
